...
    "ACCOUNT_TITLE" : {
      "comment" : "The title displayed in the AccountSetupHeader.",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Your Account"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Su cuenta"
...
            "state" : "translated",
            "value" : "Selección de gráfico"
          }
        }
      }
    },
    "Health Summary" : {
      "comment" : "The label of the navigation link that leads to the HealthSummaryView in the AdditionalAccountSections.",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Resumen de salud"
...
            "state" : "translated",
            "value" : "Enlace al resumen de salud"
          }
        }
      }
    },
    "Health Summary QR Code" : {
      "comment" : "The title displayed in the QRCodeShareView.",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Código QR del resumen de salud"
...
            "state" : "translated",
            "value" : "Mantenga presionado el botón de Bluetooth durante 3 segundos para activar el modo de emparejamiento."
          }
        }
      }
    },
    "Home" : {
      "comment" : "Displayed in the tab item label and navigation title of the Dashboard view.",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Inicio"
...
            "state" : "translated",
            "value" : "Información de licencia"
          }
        }
      }
    },
    "Logout" : {
      "comment" : "The text displayed on the secondary action button in the InvitationCodeView.",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cerrar sesión"
...
            "state" : "translated",
            "value" : "Notificaciones"
          }
        }
      }
    },
    "One-time Code" : {
      "comment" : "The text displayed next to the one-time code entry field.",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Código de un solo uso"
...
            "state" : "translated",
            "value" : "Organización"
          }
        }
      }
    },
    "PDF" : {
      "comment" : "The text displayed as one of the options of the shareModeSelector in the HealthSummaryView. ",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "PDF"
...
            "state" : "translated",
            "value" : "Procesando..."
          }
        }
      }
    },
    "QR Code" : {
      "comment" : "The text displayed as one of the options of the shareModeSelector in the HealthSummaryView. ",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Código QR"
...
            "state" : "translated",
            "value" : "Grave"
          }
        }
      }
    },
    "Share Link" : {
      "comment" : "AccessabilityLabel of the shareButton in the HealthSummaryView.",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Compartir enlace"
...
