...
                    // Most recent vitals
                    RecentVitalsSection()
                }
                    .padding()
            }
                .background(Color(.systemGroupedBackground))
                .navigationTitle("Home")
                .toolbar {
                    if AccountButton.shouldDisplay {
                        AccountButton(isPresented: $presentingAccount)
                    }
                }
#if DEBUG
                .toolbar {
                    if FeatureFlags.testMockDevices {
                        ToolbarItemGroup(placement: .secondaryAction) {
                            Button("Trigger Weight Measurement", systemImage: "scalemass.fill") {
                                measurements.loadMockWeightMeasurement()
                            }
                            Button("Trigger Blood Pressure Measurement", systemImage: "drop.fill") {
                                measurements.loadMockBloodPressureMeasurement()
                            }
                            Button("Show Measurements", systemImage: "heart.text.square") {
...
